Bug 563186 - [15] Record - override annotation for accessors
Change-Id: I78d975191af0f7042fc3b8f79727d126a8976c72
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>